--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <hr />
     <h3>בקשה להקלה ולתיאום מס על ידי המעביד</h3>
     <h4>יש מלא את הפרטים באופן דיגיטלי בלבד</h4>
-    <form action="https://formspree.io/f/mwkzdwyg" method="post">
+    <form action="https://formspree.io/f/xzbwnwpn" method="post">
       <h3>
         <input
           type="number"
@@ -97,16 +97,18 @@
               />
             </th>
             <th>
+              <label for="employee-birth-date">תאריך לידה</label>
               <input
-                type="datetime"
+                type="date"
                 name="ת. לידה"
                 id="employee-birth-date"
                 placeholder="תאריך לידה"
               />
             </th>
             <th>
+              <label for="employee-birth-date">תאריך עליה</label>
               <input
-                type="text"
+                type="date"
                 name="תאריך עליה"
                 id="immigration-date"
                 placeholder="תאריך עליה"
@@ -168,13 +170,33 @@
               סטטוס אישי
               <br />
               <label for="bachelor">רווק/ה</label>
-              <input type="radio" name="status" id="bachelor" value="רווק" />
+              <input
+                type="radio"
+                name="סטטוס משפחתי"
+                id="bachelor"
+                value="רווק"
+              />
               <label for="married">נשוי/אה</label>
-              <input type="radio" name="status" id="married" value="נשוי/אה" />
+              <input
+                type="radio"
+                name="סטטוס משפחתי"
+                id="married"
+                value="נשוי/אה"
+              />
               <label for="divorcee">גרוש/ה</label>
-              <input type="radio" name="status" id="divorcee" value="גרוש/ה" />
+              <input
+                type="radio"
+                name="סטטוס משפחתי"
+                id="divorcee"
+                value="גרוש/ה"
+              />
               <label for="widower">אלמנ/ה</label>
-              <input type="radio" name="status" id="widower" value="אלמנ/ה" />
+              <input
+                type="radio"
+                name="סטטוס משפחתי"
+                id="widower"
+                value="אלמנ/ה"
+              />
             </td>
             <td>
               האם את/ה תושב/ת ישראל?
@@ -182,12 +204,17 @@
               <label for="resident-yes">כן</label>
               <input
                 type="radio"
-                name="resident"
+                name="תושב ישראל"
                 id="resident-yes"
                 value="כן"
               />
               <label for="resident-no">לא</label>
-              <input type="radio" name="resident" id="resident-no" value="לא" />
+              <input
+                type="radio"
+                name="תושב ישראל"
+                id="resident-no"
+                value="לא"
+              />
             </td>
             <td colspan="2">
               <input
@@ -200,6 +227,353 @@
           </tr>
         </thead>
       </table>
+
+      <h2>ג. פרטים על ילדים שבשנת המס טרם מלאו להם 19 שנה</h2>
+      <details>
+        <table>
+          <summary>הרחב במידת הצורך</summary>
+          <thead>
+            <tr>
+              <th>
+                <input
+                  type="text"
+                  name="שם קטין 1"
+                  id="1-19-name"
+                  placeholder="שם"
+                />
+              </th>
+              <th>
+                <input
+                  type="text"
+                  name="ת.ז קטין 1"
+                  id="19-id"
+                  placeholder="ת.ז"
+                />
+              </th>
+              <th>
+                <input
+                  type="date"
+                  name="תאריך לידה קטין 1"
+                  id="1-19-birth-date"
+                  placeholder="תאריך לידה"
+                />
+              </th>
+            </tr>
+
+            <tr>
+              <th>
+                <input
+                  type="text"
+                  name="שם קטין 2"
+                  id="2-19-name"
+                  placeholder="שם"
+                />
+              </th>
+              <th>
+                <input
+                  type="text"
+                  name="ת.ז קטין 2"
+                  id="2-19-id"
+                  placeholder="ת.ז"
+                />
+              </th>
+              <th>
+                <input
+                  type="date"
+                  name="תאריך לידה קטין 2"
+                  id="2-19-birth-date"
+                  placeholder="תאריך לידה"
+                />
+              </th>
+            </tr>
+            <tr>
+              <th>
+                <input
+                  type="text"
+                  name="שם קטין 3"
+                  id="3-19-name"
+                  placeholder="שם"
+                />
+              </th>
+              <th>
+                <input
+                  type="text"
+                  name="ת.ז קטין 3"
+                  id="3-19-id"
+                  placeholder="ת.ז"
+                />
+              </th>
+              <th>
+                <input
+                  type="date"
+                  name="תאריך לידה קטין 3"
+                  id="3-19-birth-date"
+                  placeholder="תאריך לידה"
+                />
+              </th>
+            </tr>
+
+            <tr>
+              <th>
+                <input
+                  type="text"
+                  name="שם קטין 4"
+                  id="4-19-name"
+                  placeholder="שם"
+                />
+              </th>
+              <th>
+                <input
+                  type="text"
+                  name="ת.ז קטין 4"
+                  id="4-19-id"
+                  placeholder="ת.ז"
+                />
+              </th>
+              <th>
+                <input
+                  type="date"
+                  name="תאריך לידה קטין 4"
+                  id="4-19-birth-date"
+                  placeholder="תאריך לידה"
+                />
+              </th>
+            </tr>
+          </thead>
+        </table>
+      </details>
+
+      <h2>ד. פרטים על הכנסותי ממעביד זה</h2>
+      <table>
+        <tr>
+          <th>
+            אני מקבל
+            <hr />
+
+            <label for="mounth-income">משכורת חודשית</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="mounth-income"
+              value="משכורת חודשית"
+            />
+            <label for="part-income">משכורת חלקית</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="part-income"
+              value="משכורת חלקית"
+            />
+            <label for="allowance-income">קצבה</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="allowance-income"
+              value="קצבה"
+            />
+            <br />
+            <label for="second-income">משכורת נוספת</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="second-income"
+              value="משכורת נוספת"
+            />
+            <label for="salary-income">שכר עבודה</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="salary-income"
+              value="שכר עבודה"
+            />
+          </th>
+          <th>
+            <label for="start-date">תאריך תחילה</label>
+            <input type="date" name="תאריך תחילת העסקה" id="start-date" />
+          </th>
+          <th>
+            <label for="end-date">תאריך סיום</label>
+            <input type="date" name="תאריך סיום העסקה" id="end-date" />
+          </th>
+        </tr>
+      </table>
+      <h2>ה. פרטים על הכנסות נוספות</h2>
+      <table>
+        <tr>
+          <th>
+            <label for="no-other-income">אין לי הכנסות נוספות</label>
+            <input
+              type="checkbox"
+              name="אין למשתמש הכנסה נוספת"
+              id="no-other-income"
+            />
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <label for="yes-other-income">יש לי הכנסה נוספת כמפורט להלן</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת"
+              id="yes-other-income"
+            />
+
+            <br />
+
+            <label for="another-income-salary">משכורת חודשית</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת חודשית"
+              id="another-income-salary"
+            />
+
+            <label for="another-part-salary">משכורת חלקית</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת חלקית"
+              id="another-part-salary"
+            />
+
+            <label for="another-income-allowance">קיצבה</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת קצבה"
+              id="another-income-allowance"
+            />
+
+            <label for="another-income-second-salary">משכורת נוספת</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת: משכורת נוספת"
+              id="another-income-second-salary"
+            />
+
+            <label for="another-income-work-pay">שכר עבודה</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת: שכר עבודה"
+              id="another-income-work-pay"
+            />
+
+            <label for="another-income-daily">שכר עבודה יומי</label>
+            <input
+              type="checkbox"
+              name=" יש למשתמש הכנסה נוספת: שכר עבודה יומי"
+              id="another-income-daily"
+            />
+            <br />
+            <hr />
+            <label for="user-input-income-checkbox">יש לי הכנסה אחרת</label>
+            <input
+              type="checkbox"
+              name="הכנסה ממקור אחר"
+              id="user-input-income-checkbox"
+            />
+            <input
+              type="text"
+              name="פירוט הכנסה נוספת"
+              id="user-input-income"
+              placeholder="אנא פרט הכנסה אחרת "
+            />
+            <hr />
+
+            <label for="no-other-tax-points"
+              >איני מקבל נקודות זיכוי בהכנסתי האחרת</label
+            >
+            <input
+              type="checkbox"
+              name="ללא נקודות זיכוי בהכנסה אחרת"
+              id="no-other-tax-points"
+            />
+          </th>
+        </tr>
+      </table>
+      <h2>ו. פרטים על בן/בת הזוג</h2>
+      <table>
+        <tr>
+          <thead>
+            <th>
+              <input
+                type="tel"
+                name="ת.ז בן זוג"
+                id="partner-id"
+                pattern="[0-9]{9}"
+                placeholder="ת.ז בן זוג"
+              />
+            </th>
+            <th>
+              <input
+                type="text"
+                name="שם משפחה של בן הזוג"
+                id="patrner-surname"
+                placeholder="שם משפחה"
+              />
+            </th>
+            <th>
+              <input
+                type="text"
+                name="שם משפחה של בן הזוג"
+                id="patrner-surname"
+                placeholder="שם משפחה"
+              />
+            </th>
+            <th>
+              <label for="patner-birth-date">תאריך לידה</label>
+              <input
+                type="date"
+                name="תאריך לידת בן הזוג"
+                id="patner-birth-date"
+              />
+            </th>
+            <th>
+              <label for="patner-immigration-date">תאריך עליה</label>
+              <input
+                type="date"
+                name="תאריך עלית בן הזוג"
+                id="patner-immigration-date"
+              />
+            </th>
+          </thead>
+        </tr>
+        <tr>
+          <td>
+            <label for="no-other-income-partner">אין לבן הזוג הכנסה</label>
+            <input
+              type="checkbox"
+              name="אין לבן הזוג הכנסה"
+              id="no-other-income-partner"
+            />
+            <br />
+          </td>
+
+          <td colspan="5 ">
+            <label for="yes-other-income-partner"
+              >יש לבן הזוג הכנסה כמפורט:</label
+            >
+            <input
+              type="checkbox"
+              name="יש לבן הזוג הכנסה"
+              id="yes-other-income-partner"
+            />
+
+            <label for="partner-other-income-salary">הכנסה מעסק</label>
+            <input
+              type="checkbox"
+              name="יש לבן הזוג הכנסה מעסק"
+              id="partner-other-income-salary"
+            />
+
+            <label for="partner-other-income-tax-duty">הכנסה חייבת אחרת</label>
+            <input
+              type="checkbox"
+              name="יש לבן הזוג הכנסה חייבת אחרת"
+              id="partner-other-income-tax-duty"
+            />
+          </td>
+        </tr>
+      </table>
+
+      <br /><br /><br />
       <button type="reset">נקה טופס</button>
       <button type="submit">הגש טופס</button>
     </form>
