fixed html pages. css not operational yet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     </style>
   </head>
   <body>
-    <h1>כרטיס עובד - טופס 101</h1>
+    <nav>
+      <h1>כרטיס עובד - טופס 101</h1>
+      <link rel="stylesheet" href="/style.css" />
+      <a href="/index.html">סעיפים א-ג </a>
+      <a href="/page-2.html">סעיפים ד-ו</a>
+      <a href="/page-3.html">סעיפים ז-ח</a>
+    </nav>
     <hr />
     <h3>בקשה להקלה ולתיאום מס על ידי המעביד</h3>
     <h4>יש מלא את הפרטים באופן דיגיטלי בלבד</h4>
@@ -28,6 +34,7 @@
           placeholder="הזן את שנת המס"
         />
       </h3>
+      <br />
       <h2>א. פרטי המעביד</h2>
 
       <table>
@@ -342,332 +349,9 @@
           </thead>
         </table>
       </details>
-
-      <h2>ד. פרטים על הכנסותי ממעביד זה</h2>
-      <table>
-        <tr>
-          <th>
-            אני מקבל
-            <hr />
-
-            <label for="mounth-income">משכורת חודשית</label>
-            <input
-              type="radio"
-              name="סוג הכנסה"
-              id="mounth-income"
-              value="משכורת חודשית"
-            />
-            <label for="part-income">משכורת חלקית</label>
-            <input
-              type="radio"
-              name="סוג הכנסה"
-              id="part-income"
-              value="משכורת חלקית"
-            />
-            <label for="allowance-income">קצבה</label>
-            <input
-              type="radio"
-              name="סוג הכנסה"
-              id="allowance-income"
-              value="קצבה"
-            />
-            <br />
-            <label for="second-income">משכורת נוספת</label>
-            <input
-              type="radio"
-              name="סוג הכנסה"
-              id="second-income"
-              value="משכורת נוספת"
-            />
-            <label for="salary-income">שכר עבודה</label>
-            <input
-              type="radio"
-              name="סוג הכנסה"
-              id="salary-income"
-              value="שכר עבודה"
-            />
-          </th>
-          <th>
-            <label for="start-date">תאריך תחילה</label>
-            <input type="date" name="תאריך תחילת העסקה" id="start-date" />
-          </th>
-          <th>
-            <label for="end-date">תאריך סיום</label>
-            <input type="date" name="תאריך סיום העסקה" id="end-date" />
-          </th>
-        </tr>
-      </table>
-      <h2>ה. פרטים על הכנסות נוספות</h2>
-      <table>
-        <tr>
-          <th>
-            <label for="no-other-income">אין לי הכנסות נוספות</label>
-            <input
-              type="checkbox"
-              name="אין למשתמש הכנסה נוספת"
-              id="no-other-income"
-            />
-          </th>
-        </tr>
-        <tr>
-          <th>
-            <label for="yes-other-income">יש לי הכנסה נוספת כמפורט להלן</label>
-            <input
-              type="checkbox"
-              name="יש למשתמש הכנסה נוספת"
-              id="yes-other-income"
-            />
-
-            <br />
-
-            <label for="another-income-salary">משכורת חודשית</label>
-            <input
-              type="checkbox"
-              name="יש למשתמש הכנסה נוספת חודשית"
-              id="another-income-salary"
-            />
-
-            <label for="another-part-salary">משכורת חלקית</label>
-            <input
-              type="checkbox"
-              name="יש למשתמש הכנסה נוספת חלקית"
-              id="another-part-salary"
-            />
-
-            <label for="another-income-allowance">קיצבה</label>
-            <input
-              type="checkbox"
-              name="יש למשתמש הכנסה נוספת קצבה"
-              id="another-income-allowance"
-            />
-
-            <label for="another-income-second-salary">משכורת נוספת</label>
-            <input
-              type="checkbox"
-              name="יש למשתמש הכנסה נוספת: משכורת נוספת"
-              id="another-income-second-salary"
-            />
-
-            <label for="another-income-work-pay">שכר עבודה</label>
-            <input
-              type="checkbox"
-              name="יש למשתמש הכנסה נוספת: שכר עבודה"
-              id="another-income-work-pay"
-            />
-
-            <label for="another-income-daily">שכר עבודה יומי</label>
-            <input
-              type="checkbox"
-              name=" יש למשתמש הכנסה נוספת: שכר עבודה יומי"
-              id="another-income-daily"
-            />
-            <br />
-            <hr />
-            <label for="user-input-income-checkbox">יש לי הכנסה אחרת</label>
-            <input
-              type="checkbox"
-              name="הכנסה ממקור אחר"
-              id="user-input-income-checkbox"
-            />
-            <input
-              type="text"
-              name="פירוט הכנסה נוספת"
-              id="user-input-income"
-              placeholder="אנא פרט הכנסה אחרת "
-            />
-            <hr />
-
-            <label for="no-other-tax-points"
-              >איני מקבל נקודות זיכוי בהכנסתי האחרת</label
-            >
-            <input
-              type="checkbox"
-              name="ללא נקודות זיכוי בהכנסה אחרת"
-              id="no-other-tax-points"
-            />
-          </th>
-        </tr>
-      </table>
-      <h2>ו. פרטים על בן/בת הזוג</h2>
-      <table>
-        <tr>
-          <thead>
-            <th>
-              <input
-                type="tel"
-                name="ת.ז בן זוג"
-                id="partner-id"
-                pattern="[0-9]{9}"
-                placeholder="ת.ז בן זוג"
-              />
-            </th>
-            <th>
-              <input
-                type="text"
-                name="שם משפחה של בן הזוג"
-                id="patrner-surname"
-                placeholder="שם משפחה"
-              />
-            </th>
-            <th>
-              <input
-                type="text"
-                name="שם משפחה של בן הזוג"
-                id="patrner-surname"
-                placeholder="שם משפחה"
-              />
-            </th>
-            <th>
-              <label for="patner-birth-date">תאריך לידה</label>
-              <input
-                type="date"
-                name="תאריך לידת בן הזוג"
-                id="patner-birth-date"
-              />
-            </th>
-            <th>
-              <label for="patner-immigration-date">תאריך עליה</label>
-              <input
-                type="date"
-                name="תאריך עלית בן הזוג"
-                id="patner-immigration-date"
-              />
-            </th>
-          </thead>
-        </tr>
-        <tr>
-          <td>
-            <label for="no-other-income-partner">אין לבן הזוג הכנסה</label>
-            <input
-              type="checkbox"
-              name="אין לבן הזוג הכנסה"
-              id="no-other-income-partner"
-            />
-            <br />
-          </td>
-
-          <td colspan="5 ">
-            <label for="yes-other-income-partner"
-              >יש לבן הזוג הכנסה כמפורט:</label
-            >
-            <input
-              type="checkbox"
-              name="יש לבן הזוג הכנסה"
-              id="yes-other-income-partner"
-            />
-
-            <label for="partner-other-income-salary">הכנסה מעסק</label>
-            <input
-              type="checkbox"
-              name="יש לבן הזוג הכנסה מעסק"
-              id="partner-other-income-salary"
-            />
-
-            <label for="partner-other-income-tax-duty">הכנסה חייבת אחרת</label>
-            <input
-              type="checkbox"
-              name="יש לבן הזוג הכנסה חייבת אחרת"
-              id="partner-other-income-tax-duty"
-            />
-          </td>
-        </tr>
-      </table>
-
-      <h2>ז. שינויים במהלך השנה</h2>
-      <table>
-        <table>
-          <tr colspan="7">
-            <th>תאריך השינוי</th>
-            <th>פרטי השינוי</th>
-            <th>חתימת העובד</th>
-          </tr>
-          <tbody>
-            <tr>
-              <td>
-                <input type="date" name="תאריך שנוי 1" id="change-date-1" />
-              </td>
-              <td>
-                <input type="text" name="פרטי שינוי 1" id="change-details-1" />
-              </td>
-
-              <td>
-                <input
-                  type="text"
-                  name="חתימת שינוי 1"
-                  id="change-signature-1"
-                />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <input type="date" name="תאריך שנוי 2" id="change-date-2" />
-              </td>
-              <td>
-                <input type="text" name="פרטי שינוי 2" id="change-details-2" />
-              </td>
-
-              <td>
-                <input
-                  type="text"
-                  name="חתימת שינוי 2"
-                  id="change-signature-2"
-                />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <input type="date" name="תאריך שנוי 3" id="change-date-3" />
-              </td>
-              <td>
-                <input type="text" name="פרטי שינוי 3" id="change-details-3" />
-              </td>
-
-              <td>
-                <input
-                  type="text"
-                  name="חתימת שינוי 3"
-                  id="change-signature-3"
-                />
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </table>
-
-      <h2>ח. אני מבקש פטור / זיכוי ממס מהסיבות הבאות</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>
-              <label for="israeli-resident">אני תושב ישראל</label>
-              <input
-                type="checkbox"
-                name="המשתמש תושב ישראל"
-                id="israeli-resident"
-              />
-            </th>
-          </tr>
-          <tr>
-            <th>
-              <label for="user-disability"
-                >אני סובל מנכות רפואית כהגדרתה בחוק</label
-              >
-              <input
-                type="checkbox"
-                name="המשתמש בעל נכות רפואית"
-                id="user-disability"
-              />
-            </th>
-          </tr>
-        </thead>
-      </table>
-
-      <br /><br /><br />
-      <label for="user-fiels">אנא צרף אסמכתאות מתאימות</label>
-      <input type="file" name="מסמכים מצורפים" id="user-fiels" />
       <br /><br />
       <button type="reset">נקה טופס</button>
-      <button type="submit">הגש טופס</button>
+      <button type="submit">שמור כטיוטא סעיפים אלו</button>
     </form>
   </body>
 </html>
