--- a/page-2.html
+++ b/page-2.html
@@ -1,10 +1,261 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>טופס 101</title>
+    <style>
+      table,
+      th,
+      td {
+        border: 2px solid black;
+        border-collapse: collapse;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <h1>כרטיס עובד - טופס 101</h1>
+      <link rel="stylesheet" href="/style.css" />
+      <a href="/index.html">סעיפים א-ג </a>
+      <a href="/page-2.html">סעיפים ד-ו</a>
+      <a href="/page-3.html">סעיפים ז-ח</a>
+    </nav>
+    <hr />
+    <form action="https://formspree.io/f/xzbwnwpn" method="post">
+      <h2>ד. פרטים על הכנסותי ממעביד זה</h2>
+      <table>
+        <tr>
+          <th>
+            אני מקבל
+            <hr />
+
+            <label for="mounth-income">משכורת חודשית</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="mounth-income"
+              value="משכורת חודשית"
+            />
+            <label for="part-income">משכורת חלקית</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="part-income"
+              value="משכורת חלקית"
+            />
+            <label for="allowance-income">קצבה</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="allowance-income"
+              value="קצבה"
+            />
+            <br />
+            <label for="second-income">משכורת נוספת</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="second-income"
+              value="משכורת נוספת"
+            />
+            <label for="salary-income">שכר עבודה</label>
+            <input
+              type="radio"
+              name="סוג הכנסה"
+              id="salary-income"
+              value="שכר עבודה"
+            />
+          </th>
+          <th>
+            <label for="start-date">תאריך תחילה</label>
+            <input type="date" name="תאריך תחילת העסקה" id="start-date" />
+          </th>
+          <th>
+            <label for="end-date">תאריך סיום</label>
+            <input type="date" name="תאריך סיום העסקה" id="end-date" />
+          </th>
+        </tr>
+      </table>
+      <h2>ה. פרטים על הכנסות נוספות</h2>
+      <table>
+        <tr>
+          <th>
+            <label for="no-other-income">אין לי הכנסות נוספות</label>
+            <input
+              type="checkbox"
+              name="אין למשתמש הכנסה נוספת"
+              id="no-other-income"
+            />
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <label for="yes-other-income">יש לי הכנסה נוספת כמפורט להלן</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת"
+              id="yes-other-income"
+            />
+
+            <br />
+
+            <label for="another-income-salary">משכורת חודשית</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת חודשית"
+              id="another-income-salary"
+            />
+
+            <label for="another-part-salary">משכורת חלקית</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת חלקית"
+              id="another-part-salary"
+            />
+
+            <label for="another-income-allowance">קיצבה</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת קצבה"
+              id="another-income-allowance"
+            />
+
+            <label for="another-income-second-salary">משכורת נוספת</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת: משכורת נוספת"
+              id="another-income-second-salary"
+            />
+
+            <label for="another-income-work-pay">שכר עבודה</label>
+            <input
+              type="checkbox"
+              name="יש למשתמש הכנסה נוספת: שכר עבודה"
+              id="another-income-work-pay"
+            />
+
+            <label for="another-income-daily">שכר עבודה יומי</label>
+            <input
+              type="checkbox"
+              name=" יש למשתמש הכנסה נוספת: שכר עבודה יומי"
+              id="another-income-daily"
+            />
+            <br />
+            <hr />
+            <label for="user-input-income-checkbox">יש לי הכנסה אחרת</label>
+            <input
+              type="checkbox"
+              name="הכנסה ממקור אחר"
+              id="user-input-income-checkbox"
+            />
+            <input
+              type="text"
+              name="פירוט הכנסה נוספת"
+              id="user-input-income"
+              placeholder="אנא פרט הכנסה אחרת "
+            />
+            <hr />
+
+            <label for="no-other-tax-points"
+              >איני מקבל נקודות זיכוי בהכנסתי האחרת</label
+            >
+            <input
+              type="checkbox"
+              name="ללא נקודות זיכוי בהכנסה אחרת"
+              id="no-other-tax-points"
+            />
+          </th>
+        </tr>
+      </table>
+      <h2>ו. פרטים על בן/בת הזוג</h2>
+      <table>
+        <tr>
+          <thead>
+            <th>
+              <input
+                type="tel"
+                name="ת.ז בן זוג"
+                id="partner-id"
+                pattern="[0-9]{9}"
+                placeholder="ת.ז בן זוג"
+              />
+            </th>
+            <th>
+              <input
+                type="text"
+                name="שם פרטי של בן הזוג"
+                id="patrner-first-name"
+                placeholder="שם פרטי"
+              />
+            </th>
+            <th>
+              <input
+                type="text"
+                name="שם משפחה של בן הזוג"
+                id="patrner-surname"
+                placeholder="שם משפחה"
+              />
+            </th>
+            <th>
+              <label for="patner-birth-date">תאריך לידה</label>
+              <input
+                type="date"
+                name="תאריך לידת בן הזוג"
+                id="patner-birth-date"
+              />
+            </th>
+            <th>
+              <label for="patner-immigration-date">תאריך עליה</label>
+              <input
+                type="date"
+                name="תאריך עלית בן הזוג"
+                id="patner-immigration-date"
+              />
+            </th>
+          </thead>
+        </tr>
+        <tr>
+          <td>
+            <label for="no-other-income-partner">אין לבן הזוג הכנסה</label>
+            <input
+              type="checkbox"
+              name="אין לבן הזוג הכנסה"
+              id="no-other-income-partner"
+            />
+            <br />
+          </td>
+
+          <td colspan="5 ">
+            <label for="yes-other-income-partner"
+              >יש לבן הזוג הכנסה כמפורט:</label
+            >
+            <input
+              type="checkbox"
+              name="יש לבן הזוג הכנסה"
+              id="yes-other-income-partner"
+            />
+
+            <label for="partner-other-income-salary">הכנסה מעסק</label>
+            <input
+              type="checkbox"
+              name="יש לבן הזוג הכנסה מעסק"
+              id="partner-other-income-salary"
+            />
+
+            <label for="partner-other-income-tax-duty">הכנסה חייבת אחרת</label>
+            <input
+              type="checkbox"
+              name="יש לבן הזוג הכנסה חייבת אחרת"
+              id="partner-other-income-tax-duty"
+            />
+          </td>
+        </tr>
+      </table>
+      <br /><br />
+      <button type="reset">נקה טופס</button>
+      <button type="submit">שמור כטיוטא סעיפים אלו</button>
+    </form>
+  </body>
 </html>
